--- a/client/views/index.html
+++ b/client/views/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html ng-app="nodeTodo">
   <head>
-    <title>Todo App - with Node + Express + Angular + PostgreSQL</title>
+    <title>Todo App - with Node + Koa + Angular + PostgreSQL</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- styles -->
     <link href="http://netdna.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet" media="screen">
@@ -14,7 +14,7 @@
       <div class="header">
         <h1>Todo App</h1>
         <hr>
-        <h1 class="lead">Node + Express + Angular + PostgreSQL</h1>
+        <h1 class="lead">Node + Koa + Angular + PostgreSQL</h1>
       </div>
 
       <div class="todo-form">
